se agregaron nuevas opciones en el XML

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -9,5 +9,13 @@
     <string name="password">Contraseña</string>
     <string name="login">Entrar</string>
     <string name="signup">¿No tienes una Cuenta? Registrate</string>
-    
+
+    <string-array name="pick">
+        <item>Ingles</item>
+        <item>Español</item>
+    </string-array>
+
+    <string name="picke">Seleccione un Idioma</string>
+
+
 </resources>
