--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="signup">Don\'t have account? Sign Up </string>
     <string name="register">Register</string>
     <string name="na">Name</string>
+    <string name="confirm">Confirm</string>
 
     <string-array name="pick">
         <item>English</item>
@@ -19,5 +20,23 @@
 
     <string name="picke">Choose a Language</string>
     <string name="title_activity_register">Registro</string>
+
+    <!-- Nav Drawer Menu Items -->
+
+    <string-array name="name_drawer_items">
+        <item>Inicio</item>
+        <item>Estudio</item>
+        <item>Aprendizaje</item>
+    </string-array>
+
+    <!-- Nav Drawer List Item Icons -->
+
+    <array name="nav_drawer_icons">
+        <item>@drawable/ic_menu_home</item>
+        <item>@drawable/ic_menu_study</item>
+        <item>@drawable/ic_menu_test</item>
+    </array>
+
+    <string name="desc_list_item_icon">Item Icon</string>
 
 </resources>
