NavigationDrawer implementado perfectamente, todo funciona con normalidad

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,33 +3,32 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_register">Sing Up</string>
 
-    <string name="welcome">Welcome</string>
-    <string name="email">Email</string>
+    <string name="welcome">Welcome!</string>
+    <string name="email">Email Address</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="signup">Don\'t have account? Sign Up </string>
-    <string name="register">Register</string>
     <string name="na">Name</string>
-    <string name="confirm">Confirm</string>
+    <string name="register">Formulary</string>
+    <string name="confirm">Create Account</string>
+    <string name="main">Index</string>
 
     <string-array name="pick">
-        <item>English</item>
-        <item>Spanish</item>
+        <item>Ingles</item>
+        <item>Español</item>
     </string-array>
 
-    <string name="picke">Choose a Language</string>
-    <string name="title_activity_register">Registro</string>
+    <string name="picke">Seleccione un Idioma</string>
 
-    <!-- Nav Drawer Menu Items -->
+    <string name="desc_list_item_icon">Item Icons</string>
 
     <string-array name="name_drawer_items">
-        <item>Inicio</item>
-        <item>Estudio</item>
-        <item>Aprendizaje</item>
+        <item>Home</item>
+        <item>Learn</item>
+        <item>Test</item>
     </string-array>
-
-    <!-- Nav Drawer List Item Icons -->
 
     <array name="nav_drawer_icons">
         <item>@drawable/ic_menu_home</item>
@@ -37,6 +36,7 @@
         <item>@drawable/ic_menu_test</item>
     </array>
 
-    <string name="desc_list_item_icon">Item Icon</string>
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
