Adicionado imagenes a la aplicacion
y inicializacion de los modulos de aprendizaje

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,8 @@
         <item>@drawable/ic_menu_test</item>
     </array>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_activity__learn">Aprender</string>
 
 </resources>
