--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_activity__learn">Aprender</string>
     <string name="choose">Choose a Class</string>
+    <string name="title_activity_c_basico">Básico</string>
 
 </resources>
