--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
         <item>Home</item>
         <item>Learn</item>
         <item>Test</item>
+        <item>Graphics</item>
     </string-array>
 
     <array name="nav_drawer_icons">
@@ -38,8 +39,15 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_activity__learn">Aprender</string>
+    <string name="title_activity_activity__learn">Learn</string>
     <string name="choose">Choose a Class</string>
-    <string name="title_activity_c_basico">Básico</string>
+    <string name="title_activity_c_basico">Basic</string>
+
+    <string name="title_activity_c_numbers">Number</string>
+    <string name="title_activity_c_animales">Animals</string>
+    <string name="title_activity_c_object">Objects</string>
+    <string name="title_activity_c_country">Country</string>
+    <string name="title_activity_c_gesture">Gesture</string>
+    <string name="title_activity_c_actions">Actions</string>
 
 </resources>
