--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_activity__learn">Learn</string>
-    <string name="choose">Choose a Class</string>
+    <string name="choose">Choose a Subjects</string>
     <string name="title_activity_c_basico">Basic</string>
 
     <string name="title_activity_c_numbers">Number</string>
