Se empezó a trabajar con una librería llamada Cardslibs
Source:
* http://devahoy.com/2014/08/day-26-learn-cardslib/
* https://github.com/gabrielemariotti/cardslib

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,11 @@
     <string name="title_activity_c_country">Country</string>
     <string name="title_activity_c_gesture">Gesture</string>
     <string name="title_activity_c_actions">Actions</string>
+    <string name="title_activity_prueba_library">pruebaLibrary</string>
+
+    <string name="complete">Completed</string>
+    <string name="error">Error!</string>
+    <string name="upload">Upload</string>
+    <string name="title_activity_prueba">pruebaActivity</string>
 
 </resources>
