Se adiciona los icono de Fragments Gráficos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
         <item>@drawable/ic_menu_home</item>
         <item>@drawable/ic_menu_study</item>
         <item>@drawable/ic_menu_test</item>
+        <item>@drawable/ic_menu_graphic</item>
     </array>
 
     <!-- TODO: Remove or change this placeholder text -->
