Se añade el modulo de Administración

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
         <item>Learn</item>
         <item>Test</item>
         <item>Graphics</item>
+        <item>Admin</item>
     </string-array>
 
     <array name="nav_drawer_icons">
