Se empieza a trabajar con el web service de la app, todo esta funcionando correctamente ahora la prueba de ello en el emulador

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,6 @@
     <string name="title_activity_prueba">pruebaActivity</string>
     <string name="title_activity_base_prueba">BasePrueba</string>
     <string name="title_activity_prueba_picasso">PruebaPicasso</string>
+    <string name="title_activity_loopjprueba">LOOPJprueba</string>
 
 </resources>
