Se trabaja con Volley para realizar pruebas de HTTPresponse y funcionaron correctamente; ahora se va a trabajar con la Base de Datos en la parte de MER para proseguir con el desarrollo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,5 +60,6 @@
     <string name="title_activity_base_prueba">BasePrueba</string>
     <string name="title_activity_prueba_picasso">PruebaPicasso</string>
     <string name="title_activity_loopjprueba">LOOPJprueba</string>
+    <string name="title_activity_volley_prueba">VolleyPrueba</string>
 
 </resources>
